--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-FLAGS := -std=c++17 -Wall -Werror -Wextra -lstdc++ -pedantic 
+FLAGS := -std=c++17 -Wall -Werror -Wextra
 
 
 OS = $(shell uname)
@@ -10,22 +10,20 @@ endif
 
 
 all: clean s21_matrix_oop.a test
-	g++ -D NOT_TEST ${FLAGS} s21_matrix_oop.cpp -o a.out  && ./a.out
 
 s21_matrix_oop.a:
-	g++ ${FLAGS} -c *.cpp
-	ar rcs s21_matrix_oop.a *.o
+	g++ ${FLAGS} -c s21_matrix_oop.cpp
+	ar rcs s21_matrix_oop.a s21_matrix_oop.o
 	ranlib s21_matrix_oop.a
 
 test: clean s21_matrix_oop.a
-	g++ -D TEST ${FLAGS} -c matrix_tests/*.cc $(CHECK_FLAGS)
+	g++ ${FLAGS} -c matrix_tests/*.cc $(CHECK_FLAGS)
 	g++ *.o s21_matrix_oop.a -o test_matrix.out -lgtest
 	rm *.o
 	./test_matrix.out
 
 style_check:
-	cp ../materials/linters/.clang-format .
 	clang-format -style=Google -n *.cpp *.h
 
 clean:
-	rm -rf obj *.o *.a a.out* test_matrix.out .clang-format
+	rm -rf obj *.o *.a a.out* test_matrix.out
